# cs1440

AnalystComparer/: Analyst.cpp  Analyst.h  CMakeLists.txt  Comparer.cpp  Comparer.h  HW2 - SampleDesign.vpp  HW2-AnalystComparer.vpp  History.cpp  History.h  PurchaseSale.cpp  PurchaseSale.h  output.txt  scenario1.txt  scenario2.txt
Bingo/: Bingo.vpp  Bingo.vpp.bak_000f  Bingo.vpp.bak_001d  CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Numbers.cpp  Numbers.h
Bingo/Testing/: NumbersTester.cpp  NumbersTester.h  testMain.cpp
GenericDictionary/: CMakeLists.txt  Dictionary.h  GenericDictionary.vpp  KeyValue.h  main.cpp
GenericDictionary/Testing/: DictionaryTester.cpp  DictionaryTester.h  testMain.cpp
GeoRegions/: City.cpp  County.cpp  GeoRegions-Design.vpp  GeoRegions-Design.vpp.bak_001d  Nations.txt  Region.cpp  Region.h  State.h  UserInterface.cpp
GeoRegions/Testing/: RegionTester.cpp  testMain.cpp
Triangles/: Point.cpp  Testing%2FDebugging.xlsx  TriangleValidator-Design.vpp  TriangleValidator-Design.vpp.bak_000f  TriangleValidator-Design.vpp.bak_001d  Utils.cpp  Utils.h
Triangles/Testing/: PointTester.cpp
